# prefect-workflows

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  QUICK_START.md  README.md  SYMLINKS_README.md  TUTORIAL_PREFECT_DOCKER.md  create_symlinks.example.ps1  deploy.md  docker-compose.yml  prefect-user-guide-en.md  pyproject.toml  symlink_config.example.json
.history/: .env_20260104112837  .gitignore_20260103163838  .gitignore_20260103190722  .gitignore_20260104100241  .gitignore_20260104102109  .gitignore_20260104102210  .gitignore_20260104102412  .gitignore_20260104114245  Dockerfile_20260103201718  Dockerfile_20260103214657  README_20260104095823.md  README_20260104101600.md  README_20260104103609.md  README_20260104104000.md  README_20260104104036.md  README_20260104104039.md  README_20260104104050.md  README_20260104104059.md  README_20260104104206.md  deploy_20260104095855.md  docker-compose_20260103170240.yml  docker-compose_20260103170252.yml  docker-compose_20260103170443.yml  docker-compose_20260103170520.yml  docker-compose_20260103170537.yml  docker-compose_20260103170705.yml  docker-compose_20260103190129.yml  docker-compose_20260103190132.yml  docker-compose_20260103190329.yml  docker-compose_20260103195808.yml  docker-compose_20260103195825.yml  docker-compose_20260103201710.yml  docker-compose_20260103214913.yml  docker-compose_20260103223653.yml  docker-compose_20260104092628.yml  pyproject_20260103163418.toml  pyproject_20260103163547.toml  pyproject_20260103171022.toml  pyproject_20260103171207.toml  pyproject_20260103171313.toml  (+1 more)
scripts/: test.py
(+17 files in other folders)
